# astra-poc

./: .gitignore  .markdownlint.json  README.md  pyproject.toml
issue-686-ai-diagram-demo/: legacy.py  legacy_poc.py  poc.py
issue-686-ai-diagram-demo/batch/: extended.py  stability.py
issue-686-ai-diagram-demo/batches/: batch_1.py  batch_2.py  batch_3.py  batch_4.py  batch_5.py  design_tokens.py  prompt_builder.py
issue-686-ai-diagram-demo/evaluate/: __init__.py
issue-686-ai-diagram-demo/evaluators/: vision_llm_evaluator.py
issues/686-ai-diagram-demo/: ARCHITECTURE.md  README.md  config.py  poc.py
issues/686-ai-diagram-demo/batch/: core.py  retest.py  specialized.py
issues/686-ai-diagram-demo/batch/design/: prompts.py
issues/686-ai-diagram-demo/evaluate/: pillow.py
issues/686-ai-diagram-demo/prompt/: __init__.py  builder.py
issues/686-ai-diagram-demo/prompt/aesthetic/: __init__.py  palette.py  preset.py
issues/686-ai-diagram-demo/prompt/semantic/: __init__.py  annotation.py  container.py  matrix.py  radial.py  sequence.py
src/poc/: __init__.py  __main__.py  _discovery.py  _runner.py  _status.py
src/poc/base/: __init__.py  config.py  evaluator.py  poc.py  poc_base.py  result.py  tracker.py
src/poc/run/: discovery.py  runner.py  status.py
