[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "astra-poc"
version = "0.1.0"
description = "通用 POC 验证框架 — PocBase[T] 抽象基类 + PocRunner 编排 + CompositeEvaluator"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Astra Flow Team"},
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["poc*"]

[tool.setuptools.package-data]
poc = ["py.typed"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
